<resources>
    <string name="app_name">LoginApplication</string>
    <string name="action_settings">Settings</string>
    <string name="login_page">Login Page</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="attempts">Attempts</string>
    <string name="login">Login</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome</string>
</resources>
